MSVINT-26 Canvis portal1 - Especific UdL

--- a/portal/portal-impl/impl/src/bundle/sitenav_ca.properties
+++ b/portal/portal-impl/impl/src/bundle/sitenav_ca.properties
@@ -99,10 +99,10 @@ rs_menuExplanation=Visita l\u2019espai amb un rol diferent. Seleccionar un rol r
 
 bread_separator=>
 
-moresite_projects=PROJECTES
-moresite_portfolios=PORTAFOLIS
-moresite_administration=ADMINISTRACI\u00d3
-moresite_other=ALTRES
+moresite_projects=Projectes
+moresite_portfolios=Portafolis
+moresite_administration=Administraci\u00d3
+moresite_other=Altres
 moresite_unknown_term=(per\u00edode acad\u00e8mic desconegut)
 moresite_organize_favorites=Organitza els favorits
 moresite_favorites=Favorits
@@ -110,6 +110,20 @@ moresite_add_to_favorites=Afegeix [l\u2019espai] als favorits
 moresite_remove_from_favorites=Elimina [l\u2019espai] dels favorits
 moresite_favorites_on=Activa
 moresite_favorites_off=Desactiva
+
+moresite_comunicacio = Comunicaci\u00F3
+moresite_comunitat = Comunitat
+moresite_coord = Comunicaci\u00F3
+moresite_coursefundacio = Doc\u00E8ncia no reglada
+moresite_coursegestio = Comunitat
+moresite_courseice = Doc\u00E8ncia no reglada
+moresite_doctorat = Doctorat
+moresite_intranet = Intranet
+moresite_pat = Comunicaci\u00F3
+moresite_projectedocent = Projectes docents 
+moresite_utils = Espais d'utilitat
+moresite_other_terms = Altres anys
+moresite_other_terms = Otros a\u00F1os
 
 timeout_dialog_title=Av\u00eds de fi de sessi\u00f3
 timeout_dialog_warning_message=La seva sessi\u00f3 expirar\u00e0 en <span>{0}</span> minuts.
