--- a/portal/portal-impl/impl/src/bundle/sitenav_es.properties
+++ b/portal/portal-impl/impl/src/bundle/sitenav_es.properties
@@ -103,10 +103,10 @@ rs_menuExplanation=Visite el sitio con otro rol. Al seleccionar el rol se recarg
 
 bread_separator=>
 
-moresite_projects=PROYECTOS
-moresite_portfolios=PORTAFOLIOS
-moresite_administration=ADMINISTRACI\u00d3N
-moresite_other=OTROS
+moresite_projects=Proyectos
+moresite_portfolios=Portafolios
+moresite_administration=Administraci\u00d3n
+moresite_other=Otros
 moresite_unknown_term=(semestre acad\u00e9mico desconocido)
 moresite_organize_favorites=Organizar favoritos
 moresite_favorites=Favoritos
@@ -114,6 +114,18 @@ moresite_add_to_favorites=A\u00f1adir [sitio] a favoritos
 moresite_remove_from_favorites=Eliminar [sitio] de favoritos
 moresite_favorites_on=Activado
 moresite_favorites_off=Desactivado
+
+moresite_comunicacio = Comunicaci\u00F3n
+moresite_comunitat = Comunidad
+moresite_coord = Comunicaci\u00F3n
+moresite_coursefundacio = Docencia no reglada
+moresite_coursegestio = Comunidad
+moresite_courseice = Docencia no reglada
+moresite_doctorat = Doctorado
+moresite_intranet = Intranet
+moresite_pat = Comunicaci\u00F3n
+moresite_projectedocent = Proyectos docentes 
+moresite_utils = Sitios de utilidad
 
 timeout_dialog_title=Alerta\: tiempo m\u00e1ximo superado
 timeout_dialog_warning_message=Su sesi\u00f3n expirar\u00e1 en <span>{0}</span> minutos.
