MSVINT-38 Canvis bundles en eina content

--- a/content/content-bundles/resources/content_es.properties
+++ b/content/content-bundles/resources/content_es.properties
@@ -51,7 +51,7 @@ access.site1=Visible al sitio completo
 access.group=Grupo(s) seleccionado(s)
 access.group1=Visible a los grupos seleccionados\: {0}
 access.group.missing=Grupos no encontrados
-access.dropbox=Carpeta personal
+access.dropbox=Espacio Compartido
 access.dropbox1=Visible para instructor y estudiante
 
 # Definitions for roles based on their ids. .anon is the roleid for pubview / public access.
@@ -254,8 +254,8 @@ gen.created=Creado por
 gen.created1=Creado por
 gen.creatime=Hora de creaci\u00f3n
 gen.description=Descripci\u00f3n
-gen.drop=Drop Box
-gen.email1=Notificaci\u00f3n por correo electr\u00f3nico\:
+gen.drop=Espacio Compartido
+gen.email1=Noticaci\u00f3n por correo electr\u00f3nico
 gen.email2=Alto - todos los participantes
 gen.email3=Bajo - s\u00f3lo participantes que han optado a ello
 gen.email4=Ninguno - sin notificaci\u00f3n
@@ -328,7 +328,7 @@ list.sPerm=Permisos
 list.select=Marcar todos
 list.show=Mostrar otros sitios
 list.site=Recursos del sitio
-list.site.dropbox=Lista de carpetas personales
+list.site.dropbox=Lista de espacios compartidos
 list.toobig=Esta colecci\u00f3n es demasiado grande para expandirla.
 list.unselect=De-seleccionar todos
 list.ame=Acciones fin men\u00fa
@@ -450,7 +450,7 @@ sh.close=Cerrar esta carpeta
 sh.closed=Elegir carpeta
 sh.copied=copiar - pegar?
 sh.cut=corta - pega?
-sh.drop=drop box
+sh.drop=espacio compartido
 sh.get=Obtener informaci\u00f3n de este elemento
 sh.go=Ir a esta carpeta
 sh.inf=Informaci\u00f3n de esta colecci\u00f3n
@@ -482,7 +482,7 @@ sh.sorttitas=Ordenar por t\u00edtulo (ascendente)
 sh.sorttitdesc=Ordenar por t\u00edtulo (descendente)
 sh.unsel=De-seleccionar todos
 
-dropbox_highlight=Resaltar (<em class\="recentItemInstruction">&nbsp;</em>) las carpetas con cambios recientes\:
+dropbox_highlight=Resaltar (<em class\="recentItemInstruction">&nbsp;</em>) los Espacios Compartidos con cambios recientes\:
 sh.1day=1 d\u00eda
 sh.2day=2 d\u00edas
 sh.3day=3 d\u00edas
