--- a/content/content-bundles/resources/types_es.properties
+++ b/content/content-bundles/resources/types_es.properties
@@ -44,7 +44,7 @@ access.role.origin.internal.choice=Este fichero es <strong>visible por todos los
 access.role.origin.internal.fldr=Esta carpeta y sus contenidos son <strong>visibles por todos los usuarios internos</strong>.
 
 access.inherited=(Heredado)
-access.dropbox=Carpeta personal
+access.dropbox=Espacio Compartido
 access.dropbox1=Visible para instructor y estudiante
 access.group=Seleccione el/los grupos
 access.group1=Visible para seleccionar grupos\: {0}
@@ -298,7 +298,7 @@ text.notext=Por favor, introduzca los contenidos de su documento de texto.
 title.availability=Disponibilidad
 title.created=Creado por
 title.description=Descripci\u00f3n 
-title.dropbox={0} Carpeta personal
+title.dropbox={0} Espacio Compartido
 title.last=\u00faltima modificaci\u00f3n
 title.name=Nombre
 title.options=Estableciendo las opciones para los recursos del sitio {0}
@@ -344,15 +344,15 @@ oct=OCT
 nov=NOV
 dec=DIC
 
-receive.confirm.dropbox.email.options=Opciones de notificaci\u00f3n de Carpeta Personal\:
+receive.confirm.dropbox.email.options=Opciones de notificaci\u00f3n de Espacio Compartido\:
 receive.confirm.dropbox.email.allow=Permitir el env\u00edo de notificaciones por correo electr\u00f3nico
 receive.confirm.dropbox.email.always=Enviar siempre notificaciones por correo electr\u00f3nico
 receive.confirm.dropbox.email.none=No permitir el env\u00edo de notificaciones por correo electr\u00f3nico
-instr.dropbox.options=Seleccionar si se han de enviar notificaciones por correo electr\u00f3nico para los env\u00edos realizados a esta carpeta compartida.
+instr.dropbox.options=Seleccionar si se han de enviar notificaciones por correo electr\u00f3nico para los env\u00edos realizados a este espacio compartido.
 title.dropbox.options=Opciones de configuraci\u00f3n para la carpeta compartida del sitio ''{0}''
 
 # SAK-23350
-dropbox.privacy.note=Los ficheros en la herramienta Carpeta Personal s\u00f3lo pueden ser vistos por usted y los administradores del sitio. El resto de usuarios no pueden acceder a ellos.
+dropbox.privacy.note=Los ficheros en la herramienta Espacio Compartido s\u00f3lo pueden ser vistos por usted y los administradores del sitio. El resto de usuarios no pueden acceder a ellos.
 
 group.select.title=seleccionar todo
 
@@ -562,7 +562,7 @@ dropdown.duration_widget_qualifiers.11.label=Minuto
 dropdown.duration_widget_qualifiers.12=segundo
 dropdown.duration_widget_qualifiers.12.label=Segundo
 
-multiple.file.upload=Subir fichero a varias carpetas personales
+multiple.file.upload=Subir fichero a varios espacios compartidos
 multiple.file.upload.nofileselected=No ha seleccionado ning\u00fan fichero
 multiple.file.upload.nousersselected=No ha seleccionado ning\u00fan usuario
 multiple.file.upload.siteusers=Usuarios disponibles
