MSVINT-39. Específic UdL. Modificacio dropzone per poder editar noms de fitxer abans de pujar-los. Corregida cadena amb apòstrof. Instruccions webdav

--- a/content/content-bundles/resources/types_es.properties
+++ b/content/content-bundles/resources/types_es.properties
@@ -586,6 +586,8 @@ dragndrop.dictInvalidFileType=No puede subir ficheros de este tipo.
 dragndrop.dictResponseError=El servidor respondi\u00f3 con un c\u00f3digo {{statusCode}}.
 dragndrop.dictCancelUpload=Cancelar subida
 dragndrop.dictCancelUploadConfirmation=\u00bfEst\u00e1 seguro de que desea cancelar esta subida?
+dragndrop.dictChangeFilenameMessage= Se puede cambiar el nombre del fichero, pero no su extensi\u00F3n
+dragndrop.dictEditText= Haga click para editar
 dragndrop.dictRemoveFile=Eliminar archivo
 dragndrop.dictMaxFilesExceeded=No puede subir m\u00e1s archivos.
 dragndrop.dictFolderUploadError=Su navegador actual no soporta la subida de carpetas. Actualmente s\u00f3lo Chrome 21 o posteriores la soportan.
