Específic UdL - MSVINT-34 Millores missatges SAMIGO
Específic UdL - MSVINT-34 Millores missatges SAMIGO

--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
@@ -104,9 +104,11 @@ layout_by_part=Cada part est\u00e0 en una p\u00e0gina web separada
 layout_by_assessment=La prova completa es mostra en una \u00fanica p\u00e0gina web
 
 navigation=Navegaci\u00f3
-random_access=Acc\u00e9s lliure a les preguntes des de l\u2019\u00edndex de continguts. (Hi haur\u00e0 botons de \u2019Seg\u00fcent\u2019 i \u2019Anterior\u2019 a cada p\u00e0gina de navegaci\u00f3.)
-linear_access=Acc\u00e9s lineal a preguntes SENSE RETORN possible a p\u00e0gines anteriors (Nom\u00e9s es mostraran botons \u2019Seg\u00fcent\u2019. NO hi haur\u00e0 \u00edndex de continguts.)
-linear_access_warning=L\u2019acc\u00e9s lineal no permet a l\u2019estudiant veure la mateixa pregunta m\u00e9s d\u2019un cop. Cada pregunta es mostrar\u00e0 en una p\u00e0gina web separada.
+random_access=Acc\u00e9s lliure a les preguntes des de l'\u00edndex de continguts. (Hi haur\u00e0 botons de 'Seg\u00fcent' i 'Anterior' a cada p\u00e0gina de navegaci\u00f3.)
+
+linear_access=Acc\u00e9s lineal a preguntes SENSE RETORN possible a p\u00e0gines anteriors (Nom\u00e9s es mostraran botons 'Seg\u00fcent'. NO hi haur\u00e0 \u00edndex de continguts.)
+linear_access_warning=L'acc\u00E9s lineal no permet a l'estudiant veure la mateixa pregunta m\u00E9s d'un cop. Cada pregunta es mostrar\u00E0 en una p\u00E0gina web separada.
+
 automatic_submission=Presentaci\u00f3 autom\u00e0tica
 automatic_submission_note_1=Aquesta opci\u00f3 for\u00e7a la presentaci\u00f3 de les proves desades.
 
@@ -373,3 +375,10 @@ option_studentpreview=Amaga la r\u00fabrica a  l\u2019estudiant
 grading_rubric=R\u00fabrica per a qualificar
 
 copyToClipboard=Copia al porta-retalls
+# Assessment advice
+assessment_advice_title=RECOMANACIONS sobre la navegaci\u00f3 per la prova i el seu lliurament:
+assessment_advice_1=Llegiu atentament la primera p\u00e0gina de la prova, on s'indica com est\u00e0 configurada (temps per a fer-la, nombre d'intents, etc.)
+assessment_advice_2=No obriu m\u00e9s d\u2019una pestanya del navegador, ni altres finestres, per fer una prova. Tampoc hi accediu amb diversos navegadors. Aquestes accions poden provocar errades i p\u00e8rdua de dades.
+assessment_advice_3=Deseu sovint. Protegiu-vos davant la p\u00e8rdua de dades. 
+assessment_advice_title_timed=RECOMANACI\u00d3:
+assessment_advice_timed=En una prova cronometrada, no espereu als darrers segons per a lliurar-la. Poden passar alguns segons entre que premeu el bot\u00f3 i es lliura la prova. El lliurament podria ser fora de temps. 
