--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
@@ -115,9 +115,9 @@ layout_by_part=Cada parte en un p\u00e1gina web separada
 layout_by_assessment=El examen completo en una \u00fanica p\u00e1gina web
 
 navigation=Navegaci\u00f3n
-random_access=Acceso libre a las preguntas. S\u00ed hay posibilidad de volver a preguntas anteriores y s\u00ed hay \u00edndice de preguntas.
-linear_access=Acceso lineal a las preguntas. No hay posibilidad de volver a preguntas anteriores y tampoco hay \u00edndice de preguntas. 
-linear_access_warning=Nota\: en la opci\u00f3n 'Acceso lineal' tenga en cuenta que cada pregunta se mostrar\u00e1 en una p\u00e1gina web independiente y el alumnado las podr\u00e1 ver solamente una vez.
+random_access=Acceso libre a las preguntas de una Tabla de Contenidos. (Existen botones de "Guardar y continuar" y "Anterior" en cada p\u00e1gina para la navegaci\u00f3n.)
+linear_access=Acceso lineal a las preguntas SIN posibilidad de volver a p\u00e1ginas anteriores. (Existe un \u00fanico bot\u00f3n de "Guardar y continuar" para seguir adelante. NO hay p\u00e1gina de Tabla de Contenidos).
+linear_access_warning=En el caso de \u201cAcceso lineal\u201d los estudiantes no podr\u00e1n ver la misma pregunta m\u00e1s de una vez. Cada pregunta se mostrar\u00e1 en una p\u00e1gina web separada. 
 automatic_submission=Env\u00edo autom\u00e1tico
 automatic_submission_note_1=Esta opci\u00f3n fuerza la entrega de los ex\u00e1menes guardados.
 
@@ -405,3 +405,10 @@ option_studentpreview=Ocultar r\u00fabrica al estudiante
 grading_rubric=Evaluaci\u00f3n de r\u00fabrica
 
 copyToClipboard=Copiar al portapapeles
+# Assessment advice
+assessment_advice_title=RECOMENDACIONES sobre la navegaci\u00f3n por el examen y su entrega:
+assessment_advice_1=Leer atentamente la primera p\u00e1gina del examen, donde se indica c\u00f3mo est\u00e1 configurado (tiempo para completarlo, n\u00famero de intentos, etc.)
+assessment_advice_2=No abrir m\u00e1s de una pesta\u00f1a del navegador ni otras ventanas para realizar un examen. Tampoco acceder con diferentes navegadores. Estas acciones pueden provocar errores y p\u00e9rdida de datos.
+assessment_advice_3=Guardar a menudo para protegerse de la p\u00e9rdida de datos.
+assessment_advice_title_timed=RECOMENDACI\u00d3N:
+assessment_advice_timed=En un examen temporizado, no esperar a los \u00faltimos segundos para entregarlo. Pueden pasar algunos segundos entre apretar el bot\u00f3n y la entrega y podr\u00eda estar fuera de tiempo.
