--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_ca.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_ca.properties
@@ -306,7 +306,7 @@ submission_info=Informaci\u00f3 de lliurament
 mess_inst=Missatge del professor
 course=Curs
 inst=Professor
-no_time_limit=Sense l\u00edmit de temps
+no_time_limit=Sense temps l\u00edmit fixat (prova no cronometrada)
 time_limit=L\u00edmit de temps
 NoOfTries=N\u00fam.  d\u2019intents
 time_limit_hour=hores,
@@ -485,8 +485,8 @@ begin_assessment_msg_no_due=No hi ha data l\u00edmit per aquesta prova.
 begin_assessment_msg_timed_w_due_date=Un cop feu clic a "Comen\u00e7a la prova", tindreu <b>{0} o fins a {1}, el que sigui m\u00e9s curt</b> per completar la prova. La prova <b>es lliurar\u00e0 dins del termini previst</b>, sense tenir en compte si heu contestat totes les preguntes.
 begin_assessment_msg_timed_wo_due_date=Un cop feu clic a "Comen\u00e7a la prova", tindreu <b>{0}</b> per completar la prova. La prova <b>es lliurar\u00e0 quan s\u2019esgoti el termini</b>, sense tenir en compte si heu contestat totes les preguntes.
 begin_assessment_msg_timed_continue=Vau iniciar la prova  a les {0}. Teniu <b>fins {1}</b> per completar-la. <b>Es lliurar\u00e0 en aquell moment</b> sense tenir en compte si heu contestat totes les preguntes.
-begin_assessment_msg_no_time_limit=No hi ha l\u00edmit de temps. 
-begin_assessment_msg_linear=Aquesta prova \u00e9s <b>lineal</b>, aix\u00f2 vol dir que veureu les preguntes d\u2019una en una i que <b>no podreu tornar enrere</b> per veure una pregunta anterior un cop feu clic sobre \u2019Seg\u00fcent\u2019.
+begin_assessment_msg_no_time_limit=Aquesta prova no \u00e9s cronometrada. 
+begin_assessment_msg_linear=Aquesta prova \u00e9s <b>lineal</b>, aix\u00f2 vol dir que veureu les preguntes d'una en una i que <b>no podreu tornar enrere</b> per veure una pregunta anterior un cop feu clic sobre 'Seg\u00fcent'.
 begin_assessment_msg_linear_continue=Comen\u00e7areu on ho vau deixar.
 begin_assessment_msg_unlimited_submission=Podeu lliurar aquesta prova un nombre il\u00b7limitat de vegades.
 begin_assessment_msg_unlimited_submission_continue=Podeu lliurar aquesta prova un nombre il\u00b7limitat de vegades fins {0}.
@@ -591,3 +591,10 @@ multipleTabsWarningDetail=Obrir una altra prova en una pestanya o una finestra d
 # Extra Credit
 extra_credit=Cr\u00e8dit extra
 extra_credit_preview=(Cr\u00e8dit extra)
+
+#Assessment advice
+begin_assessment_advice_title_timed=RECOMANACI\u00d3:
+begin_assessment_advice_timed=En una prova cronometrada, no espereu als darrers segons per a lliurar-la. Poden passar alguns segons entre que premeu el bot\u00f3 i es lliura la prova. El lliurament podria ser fora de temps. 
+begin_assessment_advice_title=RECOMANACIONS sobre la navegaci\u00f3 per la prova i el seu lliurament: 
+begin_assessment_advice_1=No obriu m\u00e9s d'una pestanya del navegador, ni altres finestres, per fer una prova. Tampoc hi accediu des de navegadors diferents. Aquestes accions poden provocar errades i p\u00e8rdua de dades.
+begin_assessment_advice_2=Deseu sovint. Protegiu-vos davant la p\u00e8rdua de dades.
