--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_es.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_es.properties
@@ -306,7 +306,7 @@ submission_info=Env\u00edo de informaci\u00f3n
 mess_inst=Mensaje del profesor
 course=Curso
 inst=Profesor
-no_time_limit=Sin l\u00edmite de tiempo
+no_time_limit=Sin l\u00edmite de tiempo fijado (examen no temporizado)
 time_limit=Tiempo l\u00edmite
 NoOfTries=N\u00famero de intentos
 time_limit_hour=horas,
@@ -489,7 +489,7 @@ begin_assessment_msg_no_due=No existe fecha de entrega para este examen.
 begin_assessment_msg_timed_w_due_date=Una vez haga clic en "Iniciar examen", usted tendr\u00e1 <b>{0} o hasta {1} si el tiempo que queda hasta la fecha indicada es menor</b> para poder completar este examen. Ser\u00e1 <b>enviado en ese momento</b>, independientemente de si ha respondido todas las preguntas.
 begin_assessment_msg_timed_wo_due_date=Una vez haga clic en "Iniciar examen", tendr\u00e1 <b>{0}</b> para poder completar este examen. Ser\u00e1 <b>enviado transcurrido ese tiempo</b>, independientemente de si ha respondido todas las preguntas.
 begin_assessment_msg_timed_continue=Empez\u00f3 este examen el {0}. Usted tendr\u00e1 <b>hasta {1}</b> para poder completar este examen. Ser\u00e1 <b>presentado en ese momento</b>, independientemente de si ha respondido todas las preguntas.
-begin_assessment_msg_no_time_limit=No est\u00e1 temporizado.
+begin_assessment_msg_no_time_limit=Este examen no es temporizado.
 begin_assessment_msg_linear=Este examen es <b>lineal</b>, que significa que ver\u00e1s una pregunta cada vez y <b>no podr\u00e1s volver</b> a una pregunta anterior tras pulsar Siguiente.
 begin_assessment_msg_linear_continue=Usted empezar\u00e1 donde lo dej\u00f3 la \u00faltima vez.
 begin_assessment_msg_unlimited_submission=Puedes enviar este examen un n\u00famero ilimitado de veces.
@@ -609,3 +609,10 @@ multipleTabsWarningFix_4=Selecciona el examen, y pulsa en <strong>Comenzar</stro
 # Extra Credit
 extra_credit=Puntuaci\u00f3n extra
 extra_credit_preview=(Puntuaci\u00f3n extra)
+
+#Assessment advice
+begin_assessment_advice_title_timed=RECOMENDACI\u00d3N:
+begin_assessment_advice_timed=En un examen temporizado, no esperar a los \u00faltimos segundos para entregarlo. Pueden pasar algunos segundos entre apretar el bot\u00f3n y la entrega y podr\u00eda estar fuera de tiempo. 
+begin_assessment_advice_title=RECOMENDACIONES sobre la navegaci\u00f3n por el examen y su entrega:
+begin_assessment_advice_1=No abrir m\u00e1s de una pesta\u00f1a del navegador ni otras ventanas para realizar un examen. Tampoco acceder con diferentes navegadores. Estas acciones pueden provocar errores y p\u00e9rdida de datos. 
+begin_assessment_advice_2=Guardar a menudo para protegerse de la p\u00e9rdida de datos. 
