CVON-344. A revisar 22.x - Apliquem els canvis del ticket SAK-44061. Posem les traduccions de Sakai 22 perquè són molt més clares

--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
@@ -150,10 +150,10 @@ feedback_type=Introdu\u00efu quins tipus de comentari rebr\u00e0 l\u2019estudian
 feedback_level=Introdu\u00efu a quin nivell es faran comentaris
 immediate_feedback=Comentaris immediats
 immediate=Immediat
-feedback_by_date=Els comentaris es mostraran als estudiants en dates concretes
-no_feedback=No es mostraran comentaris a l\u2019alumne
-feedback_start_date=Del (obligatori)\:
-feedback_end_date=Fins\:
+feedback_by_date=Els comentaris es mostraran als estudiants nom\u00e9s entre dues dates espec\u00edfiques 
+no_feedback=No es mostraran comentaris a l'alumne
+feedback_start_date=Del (Obligatori):
+feedback_end_date=Fins:
 feedback_score_threshold=Mostra els comentaris nom\u00e9s als estudiants amb puntuacions inferiors a
 feedback_score_threshold_required=Cal que introdu\u00efu un llindar de puntuaci\u00f3 v\u00e0lid a la secci\u00f3 de comentaris.
 
@@ -242,7 +242,7 @@ ip_error=Indiqueu una adre\u00e7a IP v\u00e0lida o una adre\u00e7a parcial a alt
 ip_note=Una adre\u00e7a IP per l\u00ednia. Un asterisc (*) pot ser qualsevol subxarxa simple.
 ip_example=Exemples\:
 ip_ex=171.64.139.* o 171.64.*.*
-date_error=Indiqueu la data de lliurament de comentaris a Comentaris.
+date_error=A l\u2019apartat de Comentari per mostrar els comentaris entre dues dates concretes cal indicar la data inicial
 submissions_allowed_error=Introdu\u00efu el nombre de enviaments permesos. Aquest nombre ha de ser 1 o m\u00e9s gran.
 validateURL=Valida l\u2019adre\u00e7a URL
 
