--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
@@ -163,10 +163,10 @@ feedback_level_help=Los comentarios se pueden mostrar a los estudiantes en base 
 immediate_feedback=S\u00ed, mostrar a los estudiantes los comentarios durante la realizaci\u00f3n del examen. Pueden cambiar sus respuestas durante la realizaci\u00f3n del mismo.
 on_submission_feedback=S\u00ed, mostrar los comentarios en el env\u00edo
 immediate=Inmediato
-feedback_by_date=S\u00ed, mostrar los comentarios a los estudiantes en las fechas indicadas
-no_feedback=No, no mostrar ning\u00fan comentario a los estudiantes
-feedback_start_date=De (obligatorio)\:
-feedback_end_date=Hasta\:
+feedback_by_date=Los comentarios se mostrar\u00e1n a los estudiantes en fechas concretas
+no_feedback=No mostrar
+feedback_start_date=De (Obligatorio):
+feedback_end_date=Hasta:
 feedback_score_threshold=Mostrar los comentarios solo a los alumnos con nota inferior a
 feedback_score_threshold_label=Restringir la visualizaci\u00f3n de los comentarios
 feedback_score_threshold_required=Debe proporcionar un umbral de puntuaciones v\u00e1lido en la secci\u00f3n comentarios.
