Especific UdL  Incorporar transifex CVON-344

--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_ca.properties
@@ -338,11 +338,11 @@ extendedTimeUser=Excepci\u00f3 per a l\u2019usuari
 extendedTimeGroup=Excepci\u00f3 per al grup
 extendedTime_select_User=Seleccioneu un usuari
 extendedTime_select_group=Seleccioneu un grup
-extendedTime_data_table_title=Taula de temps prorrogats.
+extendedTime_data_table_title=Taula de temps de per\u00edodes d\u2019excepci\u00f3.
 extendedTime_entry_table_title=Afegeix/Edita una excepci\u00f3.
 
 # Extended Time Errors
-extended_time_user_and_group_set=Heu d\u2019afegir un usuari o grup per les excepcions de l\u00edmit de temps i data de lliurament.
+extended_time_user_and_group_set=Heu d\u2019afegir un usuari i/o un grup per a les excepcions a les dates de lliurament i de l\u00edmit de temps a les proves cronometrades.
 extended_time_due_earlier_than_available=La data l\u00edmit no pot ser anterior a la data d\u2019inici com passa a l\u2019excepci\u00f3\: {0}.
 extended_time_due_in_past=No podeu introduir una data l\u00edmit en el passat com passa a l\u2019excepci\u00f3\: {0}.
 extended_time_retract_earlier_than_available=La data d\u2019acceptaci\u00f3 amb retard no pot ser anterior a la data de disponibilitat o la data l\u00edmit com passa a l\u2019excepci\u00f3\: {0}.
