--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages_es.properties
@@ -385,7 +385,7 @@ extended_time_name_not_found=N/A
 extended_time_duplicate_users=No se pueden duplicar las excepciones de tiempo. Se han detectado duplicados en los siguientes usuarios\: {0}.
 extended_time_duplicate_groups=No se pueden duplicar las excepciones de tiempo. Se han detectado duplicados en los siguientes grupos\: {0}.
 extended_time_and=&
-extended_time_open_window_less_than_time_limit=El tiempo l\u00edmite de la excepci\u00f3n establecida para {0} es superior a la fecha l\u00edmite de entrega. Por favor, reduce el tiempo l\u00edmite o cambie las fechas correspondientes.
+extended_time_open_window_less_than_time_limit=En esta excepci\u00f3n el tiempo l\u00edmite definido es mayor que el per\u00edodo de disponibilidad configurado. Debe reducir el tiempo l\u00edmite o modificar la fecha l\u00edmite para la entrega o la de aceptaci\u00f3n con retraso para configurar un per\u00edodo excepcional m\u00e1s largo.
 
 # Expand Collapse
 expandAll=Expandir todo
