A Eliminar 21.x - MSVINT-62. Traduccions que mancava afegir o eren incorrectes

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_es.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_es.properties
@@ -138,6 +138,11 @@ label.addgradeitem.createanother=Crear otro
 label.addgradeitem.scalegrades=\u00bfEscalar las notas existentes?
 label.addgradeitem.highlight.title=Este es tu nuevo \u00edtem de calificaci\u00f3n
 label.addgradeitem.highlight.message=Para empezar a calificar, haga click aqu\u00ed o seleccione este recuadro y presione Enter en el teclado.
+label.addgradeitem.toggle.all = Alternar todo
+label.addgradeitem.delete.toggle.all = Alternar todos los \u00edtems a eliminar.
+label.addgradeitem.release.toggle.all = Alternar todos los \u00edtems a publicar.
+label.addgradeitem.include.toggle.all = Alternar todos los \u00edtems a incluir.
+
 error.addgradeitem.points=Se debe definir la puntuaci\u00f3n y su valor debe ser mayor que cero.
 error.addgradeitem.title=Se debe definir el t\u00edtulo y su valor debe ser \u00fanico.
 error.addgradeitem.title.duplicate=El t\u00edtulo ''{0}'' esta duplicado. Los t\u00edtulos deben ser \u00fanicos. 
@@ -494,6 +499,8 @@ settingspage.categories.hover.dropkeepusage=La funcionalidad 'Descartar la m\u00
 settingspage.categories.hover.categoriesweightingpoints=La opci\u00f3n de \u201cpuntos\u201d en \u201cMostrar las notas finales al alumnado\u201d no es compatible con \u201cCategor\u00edas y pesos\u201d. 
 
 settingspage.categories.runningtotalerror=La suma de los pesos de las categor\u00edas deben sumar un total del 100%
+settingspage.categories.equalweight=Mismo peso
+
 
 settingspage.gradingschema.type=Tipo de nota
 settingspage.gradingschema.grade=Nota
@@ -636,7 +643,9 @@ bulkedit.heading=Editar \u00edtems masivamente
 bulkedit.column.header.gradebookitem=\u00cdtem de calificaci\u00f3n
 bulkedit.column.header.release=Publicar al alumnado
 bulkedit.column.header.include=Incluir en c\u00e1lculos de nota final
+bulkedit.column.header.delete=Eliminar
 bulkedit.update.success=Los \u00edtems de calificaci\u00f3n se han actualizado correctamente
 bulkedit.update.error=Algunos \u00edtems no se han podido actualizar. Int\u00e9ntelo de nuevo. Si el problema contin\u00faa contacte con su personal de soporte.
 
 sections.label.none=Ninguno
+label.submission-messager.title=Mensaje para los estudiantes
