Especific UdL - MSVINT-62. Traduccions que mancava afegir o eren incorrectes

--- a/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -809,7 +809,7 @@ confirm_navigation=Se perder\u00e1n todas las calificaciones que no se hayan gua
 
 
 #hiddenGroups:
-hiddenGroups_hiddenGroups=Grupos ocultos en el campo Para 
+hiddenGroups_hiddenGroups=En el campo Para (destinatarios) los grupos est\u00e1n ocultos 
 hiddenGroups_addGroup=A\u00f1adir grupo
 hiddenGroups_selectGroup=--Seleccionar grupo--
 hiddenGroups_remove=Borrar
