Específic UdL - Relacionat amb MSVINT-47

--- a/portal/portal-impl/impl/src/bundle/sitenav_es.properties
+++ b/portal/portal-impl/impl/src/bundle/sitenav_es.properties
@@ -126,6 +126,7 @@ moresite_intranet = Intranet
 moresite_pat = Comunicaci\u00F3n
 moresite_projectedocent = Proyectos docentes 
 moresite_utils = Sitios de utilidad
+moresite_other_terms=Otros a\u00F1os
 
 timeout_dialog_title=Alerta\: tiempo m\u00e1ximo superado
 timeout_dialog_warning_message=Su sesi\u00f3n expirar\u00e1 en <span>{0}</span> minutos.
