MSVINT-60 Corregir cadena que correspon a alerta temps restant samigo

--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_ca.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_ca.properties
@@ -577,7 +577,7 @@ calcq_sr_answer_label_part2=Calculeu la resposta llegint el text que hi ha al vo
 #AJAX Timer
 savedMessage=S\u2019est\u00e0 desant la vostra feina.
 subMessage=S\u2019est\u00e0 lliurant la vostra feina.
-alertMessage=\#temps\# restant.
+alertMessage=\#time\# restant.
 closeAlertMessage=Tanca l\u2019alerta
 alertTitle=ALERTA
 hideMessage=Amaga el temps restant
