--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
@@ -357,11 +357,7 @@ nscourse.select_group_sections=Selecciona un grup de seccions
 nscourse.unselect_group_sections=Deselecciona un grup de seccions
 
 nscourse.no_sections_in_term=No teniu cap secci\u00f3 corresponent al per\u00edode seleccionat. Torneu enrere i seleecioneu un altre per\u00edode.
-<<<<<<< HEAD
-nscourse.manual_disabled=Aquesta caracter\u00edstica s\u2019ha deshabilitat a tot el sistema. Contacteu el servei de suport per obtenir m\u00e9s informaci\u00f3.
-=======
-nscourse.manual_disabled=No teniu cap secci\u00f3 que pugueu afegir al curs i la configuraci\u00f3 manual s'ha deshabilitat a tot el sistema. Contacteu el servei de suport per a obtenir m\u00E9s informaci\u00F3.
->>>>>>> d8ba127c67... MSVINT-29. Específic UdL. Canvis a l'eina Site Manage per adaptar-la a la UdL
+nscourse.manual_disabled=No teniu cap secci\u00f3 que pugueu afegir al curs i la configuraci\u00f3 manual s\u2019ha deshabilitat a tot el sistema. Contacteu el servei de suport per a obtenir m\u00E9s informaci\u00F3.
 
 #Manual Vm
 man.edit=Editant l\u2019espai...
@@ -885,7 +881,7 @@ sitinfimp.wikinote=(El contingut existent s\u2019arxivar\u00e0 i s\u2019hi podr\
 ### limit of site group title ####
 site_group_title_length_limit=El t\u00edtol no pot superar els {0} car\u00e0cters. Introdu\u00efu un t\u00edtol m\u00e9s curt.
 
-# site title can't contain HTML
+# site title can\u2019t contain HTML
 siteTitle.htmlStrippedToEmpty=El t\u00edtol de l\u2019espai no pot contenir codi HTML. Introdu\u00efu un t\u00edtol v\u00e0lid.
 
 print=Versi\u00f3 imprimible
@@ -908,23 +904,23 @@ sitegen.roledescription.Instructor=Pot llegir, revisar, eliminar i afegir tant c
 sitegen.roledescription.access=Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades.
 sitegen.roledescription.Student=Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades.
 sitegen.roledescription.TeachingAssistant=Pot llegir, afegir i revisar la major part dels continguts de les seves seccions. 
-sitegen.roledescription.Administrador     	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l'espai.
-sitegen.roledescription.Baixa             	= Ja no pot accedir a l'espai, serveix per identificar usuaris que han estat participants. 
-sitegen.roledescription.Coordinador       	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l'espai.
+sitegen.roledescription.Administrador     	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l\u2019espai.
+sitegen.roledescription.Baixa             	= Ja no pot accedir a l\u2019espai, serveix per identificar usuaris que han estat participants. 
+sitegen.roledescription.Coordinador       	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l\u2019espai.
 sitegen.roledescription.Docent            	= Pot llegir i revisar continguts.
-sitegen.roledescription.Editor            	= Pot llegir i revisar continguts així com editar la informació de l'espai.
-sitegen.roledescription.Estudiant         	= Pot llegir els continguts de l'espai i afegir-ne nom\u00e9s a les zones autoritzades. 
-sitegen.roledescription.Erasmus	 	      	= Pot llegir els continguts de l'espai i afegir-ne nom\u00e9s a les zones autoritzades. (Són estudiants de la UdL que cursen l'assignatura en una altra universitat).
-sitegen.roledescription.Participant       	= Pot llegir els continguts de l'espai i afegir-ne nom\u00e9s a les zones autoritzades.
-sitegen.roledescription.Professor         	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l'espai. 
-sitegen.roledescription.Professorajudant 	= Pot llegir els continguts de l'espai i afegir-ne a les seves seccions
-sitegen.roledescription.Professordepractiques = Pot llegir els continguts de l'espai i afegir-ne a les seves seccions
-sitegen.roledescription.Convidat 			= Pot llegir alguns continguts, però no pot participar en activitats, formus, missatges, etc.
+sitegen.roledescription.Editor            	= Pot llegir i revisar continguts aix\u00ed com editar la informaci\u00f3 de l\u2019espai.
+sitegen.roledescription.Estudiant         	= Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades. 
+sitegen.roledescription.Erasmus	 	      	= Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades. (S\u00f3n estudiants de la UdL que cursen l\u2019assignatura en una altra universitat).
+sitegen.roledescription.Participant       	= Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades.
+sitegen.roledescription.Professor         	= Pot llegir, revisar, eliminar i afegir tant contingut com participants a l\u2019espai. 
+sitegen.roledescription.Professorajudant 	= Pot llegir els continguts de l\u2019espai i afegir-ne a les seves seccions.
+sitegen.roledescription.Professordepractiques = Pot llegir els continguts de l\u2019espai i afegir-ne a les seves seccions.
+sitegen.roledescription.Convidat 			= Pot llegir alguns continguts, per\u00f2 no pot participar en activitats, formus, missatges, etc.
 sitegen.roledescription.Tutor             	= Pot llegir i revisar continguts.
-sitegen.roledescription.CapEstudis			= Pot llegir i revisar continguts així com editar la informació de l'espai.
-sitegen.roledescription.Membrecomissió		= Pot llegir els continguts de l'espai i afegir-ne nom\u00e9s a les zones autoritzades.
-sitegen.roledescription.PAS					= Pot llegir els continguts de l'espai i afegir-ne nom\u00e9s a les zones autoritzades.
-sitegen.roledescription.Secciódedoctorat	= Pot llegir, afegir, eliminar i revisar tant continguts com participants així com editar la informació de l'espai.
+sitegen.roledescription.CapEstudis			= Pot llegir i revisar continguts aix\u00ed com editar la informaci\u00f3 de l\u2019espai.
+#sitegen.roledescription.Membrecomissió		= Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades.
+sitegen.roledescription.PAS					= Pot llegir els continguts de l\u2019espai i afegir-ne nom\u00e9s a les zones autoritzades.
+#sitegen.roledescription.Secciódedoctorat	= Pot llegir, afegir, eliminar i revisar tant continguts com participants aix\u00ed com editar la informaci\u00f3 de l\u2019espai.
 ##Additional site info
 sitegen.siteinfolist.modify=Data de modificaci\u00f3
 sitegen.siteinfolist.usermodify=Modificat per
@@ -1041,14 +1037,14 @@ sinfo.portalneochat.disabled=Deshabilitat
 
 #per als tipus de sites
 site.type.course                          = curs
-site.description.course = (Espais on es permet afegir grups de matr\u00EDcula, a m\u00E9s d'altres membres de la UdL i usuaris externs)
+site.description.course = (Espais on es permet afegir grups de matr\u00EDcula, a m\u00E9s d\u2019altres membres de la UdL i usuaris externs)
 site.type.project                         = projecte
-site.description.project = (Espais de col\u00B7laboraci\u00f3 que poden ser creats tant pel professorat com l'alumnat. Podeu afegir altres membres de la UdL. T\u00E9 algunes restriccions d'espai i d'eines)
+site.description.project = (Espais de col\u00B7laboraci\u00f3 que poden ser creats tant pel professorat com l\u2019alumnat. Podeu afegir altres membres de la UdL. T\u00E9 algunes restriccions d\u2019espai i d\u2019eines)
 site.type.projectedocent                  = projecte docent
 site.description.projectedocent	  = (Espais de col\u00B7laboraci\u00f3 que poden ser creats pel professorat. Podeu afegir altres membres de la UdL i usuaris externs)
 
 sitetype.actualnumofprojects             = Creat(s) {0} espai(s) de {1} disponible(s)  
-sitetype.maxnumofprojects                = Ja ha creat el m\u00E0xim nombre d''espais ({0}) de tipus Projecte
+sitetype.maxnumofprojects                = Ja ha creat el m\u00E0xim nombre d\u2019espais ({0}) de tipus Projecte
 
 sitedicla.alert                    = Av\u00EDs:
 sitedicla.can                      = Cancel\u00B7la
@@ -1056,25 +1052,25 @@ sitedicla.cancel                   = Cancel\u00B7la
 sitedicla.choose_file              = Escolliu el fitxer per importar
 sitedicla.choose_materials         = Escolliu material per a copiar aquest espai.
 sitedicla.class                    = Orla
-sitedicla.copy_materials           = Copia materials d'altres espais
-sitedicla.copy_message             = Ara escolliu els materials que vulgueu reutilitzar (copiar) d'altres que siguin propietat vostra.Si escolliu importar materials d'un fitxer, nom\u00E9s podeu copiar materials d'un espai.Es copien tots els materials i no s'actualitzen totes les dates corresponents a aquestes elements.
+sitedicla.copy_materials           = Copia materials d\u2019altres espais
+sitedicla.copy_message             = Ara escolliu els materials que vulgueu reutilitzar (copiar) d\u2019altres que siguin propietat vostra.Si escolliu importar materials d\u2019un fitxer, nom\u00E9s podeu copiar materials d\u2019un espai.Es copien tots els materials i no s\u2019actualitzen totes les dates corresponents a aquestes elements.
 sitedicla.copybtn                  = Copia els materials
 sitedicla.copying                  = Copia el material de...
-sitedicla.edit_roster              = Edita l'acc\u00E9s a l'orla per 
-sitedicla.edit_roster_announcement = La nova versi\u00F3 del campus us permet administrar i organitzar millor els espais docents dels quals sou responsables, i en definitiva, podeu seleccionar els grups d'alumnat que n'hagin de formar part, entre d'altres aspectes. Aquesta gesti\u00F3 de grups t\u00E9 sentit en tot un seguit de casos d'\u00FAs qu\u00E8 us expliquem a l'<a href="http://www.ajudacv.udl.cat/ca/pdi_pas/ajuda/siteinfo/index.html" target="_blank">ajuda</a>.
+sitedicla.edit_roster              = Edita l\u2019acc\u00E9s a l\u2019orla per 
+sitedicla.edit_roster_announcement = La nova versi\u00F3 del campus us permet administrar i organitzar millor els espais docents dels quals sou responsables, i en definitiva, podeu seleccionar els grups d\u2019alumnat que n\u2019hagin de formar part, entre d\u2019altres aspectes. Aquesta gesti\u00F3 de grups t\u00E9 sentit en tot un seguit de casos d\u2019\u00FAs qu\u00E8 us expliquem a l\u2019<a href="http://www.ajudacv.udl.cat/ca/pdi_pas/ajuda/siteinfo/index.html" target="_blank">ajuda</a>.
 sitedicla.file                     = Fitxer:
 sitedicla.import                   = Importa
-sitedicla.import_materials         = Importa els materials d'un fitxer d'arxiu d'espais
+sitedicla.import_materials         = Importa els materials d\u2019un fitxer d\u2019arxiu d\u2019espais
 sitedicla.move                     = Mou
 sitedicla.move_into                = ...al meu espai actual
 sitedicla.rem                      = Suprimeix
 sitedicla.requested                = (sol\u00B7licitat)
-sitedicla.tabhol                   = La taula cont\u00E9 la informaci\u00F3 de les classes de l'espai.
+sitedicla.tabhol                   = La taula cont\u00E9 la informaci\u00F3 de les classes de l\u2019espai.
 sitedicla.theis                    = No hi ha cap classe assignada a aquest espai
 sitedicla.upd                      = Actualitza
 sitedicla.yet                      = ja
 
-sitegen.siteinfolist.deleteClassWarning	  = Esteu segurs que voleu eliminar aquesta orla? Els participants d'aquest grup deixaran de tenir acc\u00E9s a l'espai. Si necessiteu m\u00E9s informaci\u00F3 sobre com reorganitzar l'espai contacteu abans amb el suport de campus virtual o consulteu l'Ajuda del campus virtual.
+sitegen.siteinfolist.deleteClassWarning	  = Esteu segurs que voleu eliminar aquesta orla? Els participants d\u2019aquest grup deixaran de tenir acc\u00E9s a l\u2019espai. Si necessiteu m\u00E9s informaci\u00F3 sobre com reorganitzar l\u2019espai contacteu abans amb el suport de campus virtual o consulteu l\u2019Ajuda del campus virtual.
 
 
 
