EVDOC01-23. Canvis de cadenes lligats al ticket SAK-46474. A revisar a la 22

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_ca.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_ca.properties
@@ -512,6 +512,7 @@ settingspage.categories.total=Total\:
 # these used to be numbered but were changed significantly in #3877 so removed and replaced
 settingspage.categories.instructions.categoryvisibility=Nom\u00e9s seran visibles les categories que tinguin elements de qualificaci\u00f3 assignats
 settingspage.categories.instructions.uncounteditems=Si est\u00e0 habilitat "Categories i pesos" tots els elements que no tinguin categoria seran exclosos autom\u00e0ticament de la qualificaci\u00f3 del curs. 
+settingspage.categories.instructions.points=No es pot seleccionar \u2019Categories i pesos\u2019 si a les regles de publicaci\u00f3 de les qualificacions el mostrar les qualificacions finals inclou l\u2019opci\u00f3 \u2019Punts\u2019.
 settingspage.categories.instructions.applydropkeep=Per poder usar les opcions elimina el de puntuaci\u00f3 m\u00e9s alta, elimina el de puntuaci\u00f3 m\u00e9s baixa o mant\u00e9 el de puntuaci\u00f3 m\u00e9s alta, tots els exercicis de la categoria han de tenir el mateix valor de puntuaci\u00f3.
 settingspage.categories.hover.dropkeepusage=\u2019Elimina la m\u00e9s alta\u2019 / \u2019Elimina la m\u00e9s baixa\u2019 no es pot usar a la mateixa categoria amb l\u2019opci\u00f3 de \u2019Mant\u00e9 la m\u00e9s alta\u2019
 settingspage.categories.hover.categoriesweightingpoints=L\u2019opci\u00f3 \u2019Categories i pesos\u2019 no \u00e9s compatible amb \u2019Punts\u2019 com a opci\u00f3 de visualitzaci\u00f3 de la qualificaci\u00f3 final del curs. 
