--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_es.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_es.properties
@@ -495,6 +495,7 @@ settingspage.categories.total=Total\:
 settingspage.categories.instructions.categoryvisibility=Es necesario asociar al menos un \u00edtem a una categor\u00eda para que \u00e9sta sea visible.
 settingspage.categories.instructions.uncounteditems=Si el modo 'Categor\u00edas y pesos' est\u00e1 activado las calificaciones sin categor\u00eda no se tendr\u00e1n en cuenta para el c\u00e1lculo de la nota final.
 settingspage.categories.instructions.applydropkeep=Para usar la funcionalidad de descartar la m\u00e1s alta, descartar la m\u00e1s baja o mantener la m\u00e1s alta, todos los elementos de la categor\u00eda deben tener el mismo valor.
+settingspage.categories.instructions.points=No se puede seleccionar 'Categor\u00edas y pesos' si en las reglas de publicaci\u00f3n de notas el mostrar las notas finales incluye la opci\u00f3n 'Puntos'. 
 settingspage.categories.hover.dropkeepusage=La funcionalidad 'Descartar la m\u00e1s alta' / 'Descartar la m\u00e1s baja' no puede utilizarse en la misma categor\u00eda junto con 'Mantener la m\u00e1s alta'.
 settingspage.categories.hover.categoriesweightingpoints=La opci\u00f3n de \u201cpuntos\u201d en \u201cMostrar las notas finales al alumnado\u201d no es compatible con \u201cCategor\u00edas y pesos\u201d. 
 
