EVDOC01-23. Modificació cadenes lligades a SAK-46125. A eliminar a la 22

--- a/assignment/api/src/resources/assignment_ca.properties
+++ b/assignment/api/src/resources/assignment_ca.properties
@@ -538,8 +538,9 @@ removeSelected=Elimina els seleccionats
 selectAssignments=Selecciona activitats
 restoreSelected=Restaura les seleccionades
 hardRemoveSelected=Elimina de manera definitiva les seleccionades
-restoreConfirmation=Aquests elements seran restaurats. Esteu segur de voler fer aix\u00f2?
-hardRemoveConfirmation=Aquests elements s\u2019eliminaran definitivament i no es podran recuperar. Esteu segur de voler-los eliminar?
+restoreConfirmation=Les activitats seleccionades seran restaurades. Esteu segur de voler continuar?
+restoreWarning=<strong>Alerta:</strong> quan es restaura una activitat associada amb un element de qualificaci\u00f3 hi ha algunes propietats que no es poden restaurar, com ara la categoria associada, els comentaris afegits a l\u2019element, la configuraci\u00f3 de cr\u00e8dit extra, les puntuacions excloses o l\u2019historial associat. Cal revisar l\u2019element de qualificaci\u00f3 corresponent un cop restaurada l\u2019activitat per a refer la seva configuraci\u00f3 si \u00e9s necessari. 
+hardRemoveConfirmation=Les activitats seleccionades s\u2019eliminaran de manera definitiva i no es podran recuperar. Esteu segur de voler continuar?
 subasstudent=Lliura com a estudiant
 alert.globalNavi=Si escolliu de sortir sense fer clic en cap dels botons relacionats amb el lliurament de l\u2019activitat que hi ha a la part superior o a la inferior perdreu tot el treball que heu fet. Feu clic en un dels botons o navegueu a una altra p\u00e0gina deixant c\u00f3rrer el treball fet en aquesta. 
 viewassign=Mostra l\u2019activitat
