EVDOC01-23. Canvis cadenes (i codi lligat a SAK-46514). A eliminar a la 22

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
@@ -428,6 +428,8 @@ sinfo.list.desc.ellipse=...
 sinfo.list.desc.more=(M\u00e9s)
 sinfo.language=Idioma de l\u2019espai
 sinfo.language.defaultUserLanguage=Idioma de l\u2019usuari (predeterminat)
+sinfo.manage.participants.moved=La llista de participants (que anteriorment estava aqu\u00ed) ha estat reubicada a una p\u00e0gina pr\u00f2pia anomenada <a href\="{0}">Gestiona els participants</a>, trobareu l\u2019enlla\u00e7 a la part superior.
+
 
 sitedicla.alert=Av\u00eds\:
 sitedicla.can=Cancel\u00b7la
@@ -620,6 +622,7 @@ sinfo.list.sections=Seccions
 sinfo.list.groups.student=Grups dels quals \u00e9s membre.
 sinfo.list.sections.student=Seccions de les quals sou membre.
 sinfo.list.groups.memb=Membres
+sinfo.list.groups.memb.view=Mostra els membres
 sinfo.list.groups.print=Imprimeix
 sinfo.list.participantListSize=\# {0}
 
