--- a/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
+++ b/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
@@ -721,7 +721,7 @@ close_window=Tanca la finestra
 ## Configuration properties should _not_ be mixed in with localization properties
 ## (the following should not be translated and ultimately moved into separate file)
 ##
-syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\=\u2019
+syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\='
 longPageLoad=synMain
 longPageLoadLite=synMainLite
 viewSynopticInfo=Mostra el meus missatges nous i les meves contribucions noves al f\u00f2rum
