--- a/roster2/bundle/src/bundle/roster_ca.properties
+++ b/roster2/bundle/src/bundle/roster_ca.properties
@@ -62,6 +62,13 @@ roster_spreadsheet_view=Llista
 profile_email=Correu electr\u00f2nic
 profile_picture_alt=Fotografia de
 
+# Additional info
+additionalInfo_button_text=Veure mesures de suport a l\u2019avaluaci\u00f3
+additionalInfo_modal_title=Mesures de suport a l\u2019avaluaci\u00f3 {0}
+
+# Modal
+roster_modal_close=Tancar
+
 # Facets
 facet_picture=Fotografia
 facet_name=Nom
@@ -70,6 +77,10 @@ facet_pronouns=Pronoms
 facet_dni= DNI
 facet_user_name_pronunciation=Com es pronuncia
 facet_userProperties=Propietats de l\u2019usuari
+facet_specialNeeds=Mesures de suport a l\u2019avaluaci\u00f3
+facet_additionalNotes=Pla d\u2019estudis
+facet_studentNumber=N\u00famero d\u2019expedient
+facet_additionalInfo=Informaci\u00f3 addicional
 facet_email=Correu electr\u00f2nic
 facet_role=Rol
 facet_status=Estat
@@ -97,6 +108,7 @@ perm-roster.viewemail=Pot veure el correu electr\u00f2nic dels participants
 perm-roster.viewofficialphoto=Pot veure la fotografia oficial dels participants
 perm-roster.viewsitevisits=Pot veure el nombre de visites a l\u2019espai dels participants
 perm-roster.viewuserproperties=Pot veure les propietats dels participants
+perm-roster.viewcandidatedetails=Pot veure informaci\u00f3 addicional dels participants
 
 groups=Grup
 roles_label=Rol
