--- a/roster2/bundle/src/bundle/roster_es.properties
+++ b/roster2/bundle/src/bundle/roster_es.properties
@@ -62,6 +62,13 @@ roster_spreadsheet_view=Lista
 profile_email=Correo
 profile_picture_alt=Foto de
 
+# Additional info
+additionalInfo_button_text=Ver medidas de apoyo a la docencia
+additionalInfo_modal_title=Medidas de apoyo a la docencia del usuario {0}
+
+# Modal
+roster_modal_close=Cerrar
+
 # Facets
 facet_picture=Foto
 facet_name=Nombre
@@ -69,6 +76,10 @@ facet_userId=ID
 facet_pronouns=Pronombres
 facet_user_name_pronunciation=Pronunciaci\u00f3n
 facet_userProperties=Propiedades de usuario
+facet_specialNeeds=Medidas de apoyo a la docencia
+facet_additionalNotes=Notas
+facet_studentNumber=N\u00famero de estudiante
+facet_additionalInfo=Informaci\u00f3n Adicional
 facet_email=Correo
 facet_role=Rol
 facet_status=Estado
@@ -96,6 +107,7 @@ perm-roster.viewemail=Ver direcciones de correos
 perm-roster.viewofficialphoto=Ver fotos oficiales
 perm-roster.viewsitevisits=Ver visitas al sitio
 perm-roster.viewuserproperties=Ver propiedades de participantes
+perm-roster.viewcandidatedetails=Ver informaci\u00f3n adicional del participante
 
 groups=Grupo
 roles_label=Rol
