EVDOC01-28 Identificar NESES al Roster de CV
Muestra un valor vacío en lugar de
 no-student-number: <uid>
Actualizar las traducciones

--- a/roster2/bundle/src/bundle/roster_es.properties
+++ b/roster2/bundle/src/bundle/roster_es.properties
@@ -77,7 +77,7 @@ facet_pronouns=Pronombres
 facet_user_name_pronunciation=Pronunciaci\u00f3n
 facet_userProperties=Propiedades de usuario
 facet_specialNeeds=Medidas de apoyo a la docencia
-facet_additionalNotes=Notas
+facet_additionalNotes=Plan de estudios
 facet_studentNumber=N\u00famero de estudiante
 facet_additionalInfo=Informaci\u00f3n Adicional
 facet_email=Correo
